ensure no dark mode exists for now

--- a/astro-app/src/assets/app.css
+++ b/astro-app/src/assets/app.css
@@ -1,9 +1,7 @@
 @import 'tailwindcss';
 @plugin "@tailwindcss/typography";
 @plugin "daisyui" {
-    themes:
-        light --default silk,
-        dark --prefersdark abyss;
+    themes: light --default;
     exclude:
         properties,
         radialprogress,
